--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= animate.css
+ *= bootstrap.min.css
+ *= font-awesome.min.css
+ *= main.css
+ *= responsive.css
  *= require_tree .
  *= require_self
  */
