--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,8 @@
  *= font-awesome.min.css
  *= main.css
  *= responsive.css
+ *= main.less
+ *= responsive.less
  *= require_tree .
  *= require_self
  */
