--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,8 @@
-<p>Hello World!!</p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="book-search">
+      <%= form_tag books_path, method: "GET" do %>
+      <% end %>
+    </div>
+  </div>
+</div>
