--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'variables';
+
 html,
 body {
   height: 100%;
@@ -15,6 +18,10 @@ body {
 
 .top-nav-collapse {
     background-color: #4285F4;
+}
+
+.card-title {
+  color: $first_color;
 }
 
 footer.page-footer {
