--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,18 +16,17 @@
 
             <!-- Caption -->
             <div class="full-bg-img flex-center white-text">
-                <ul class="animated fadeInUp col-md-12">
-                    <li>
-                        <h1 class="h1-responsive flex-item">Material Design for Bootstrap 4</h1>
-                        <li>
-                            <p class="flex-item">The most powerful and free UI KIT for Bootstrap</p>
-                        </li>
-                        <li>
-                            <a target="_blank" href="http://mdbootstrap.com/getting-started/" class="btn btn-primary btn-lg flex-item">Sign up!</a>
-
-                            <a target="_blank" href="http://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default btn-lg flex-item">Learn more</a>
-                        </li>
-                </ul>
+              <ul class="animated fadeInUp col-md-12">
+                <li>
+                  <h1 class="h1-responsive flex-item">Americano</h1>
+                  <li>
+                    <p class="flex-item">Enrich a book with notes.</p>
+                  </li>
+                  <li>
+                    <%= link_to "SIGN UP!", new_user_registration_path, class: "btn btn-primary btn-lg flex-item" %>
+                  </li>
+                </li>
+              </ul>
             </div>
             <!-- /.Caption -->
 
@@ -37,21 +36,21 @@
         <!-- Second slide -->
         <div class="carousel-item view hm-black-light" style="background-image: url('http://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg'); background-repeat: no-repeat; background-size: cover;">
 
-            <!-- Caption -->
-            <div class="full-bg-img flex-center white-text">
-                <ul class="animated fadeInUp col-md-12">
-                    <li>
-                        <h1 class="h1-responsive">Lots of tutorials at your disposal</h1>
-                    </li>
-                    <li>
-                        <p>And all of them are FREE!</p>
-                    </li>
-                    <li>
-                        <a target="_blank" href="http://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-primary btn-lg">Start learning</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.Caption -->
+          <!-- Caption -->
+          <div class="full-bg-img flex-center white-text">
+            <ul class="animated fadeInUp col-md-12">
+              <li>
+                <h1 class="h1-responsive">Study SNS</h1>
+              </li>
+              <li>
+                <p>Asking costs nothing.</p>
+              </li>
+              <li>
+                <%= link_to "SIGN UP!", new_user_registration_path, class: "btn btn-primary btn-lg flex-item" %>
+              </li>
+            </ul>
+          </div>
+          <!-- /.Caption -->
 
         </div>
         <!-- /.Second slide -->
@@ -61,16 +60,17 @@
 
             <!-- Caption -->
             <div class="full-bg-img flex-center white-text">
-                <ul class="animated fadeInUp col-md-12">
-                    <li>
-                        <h1 class="h1-responsive">Visit our support forum</h1></li>
-                    <li>
-                        <p>Our community can help you with any question</p>
-                    </li>
-                    <li>
-                        <a target="_blank" href="http://mdbootstrap.com/forums/forum/support/" class="btn btn-default btn-lg">Support forum</a>
-                    </li>
-                </ul>
+              <ul class="animated fadeInUp col-md-12">
+                <li>
+                  <h1 class="h1-responsive">Notes in whole wolrd</h1>
+                </li>
+                <li>
+                  <p>It is good to learn something to teach someone.</p>
+                </li>
+                <li>
+                  <%= link_to "SIGN UP!", new_user_registration_path, class: "btn btn-primary btn-lg flex-item" %>
+                </li>
+              </ul>
             </div>
             <!-- /.Caption -->
 
@@ -82,12 +82,12 @@
 
     <!--Controls-->
     <a class="carousel-control-prev" href="#carousel-example-3" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carousel-example-3" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
     </a>
     <!--/.Controls-->
 </div>
@@ -95,105 +95,65 @@
 
 <br>
 
-<!--Content-->
 <div class="container">
-    <div class="row">
-        <!--First columnn-->
-        <div class="col-lg-4">
-            <!--Card-->
-            <div class="card">
-
-                <!--Card image-->
-                <div class="view overlay hm-white-slight">
-                    <img src="http://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(2).jpg" class="img-fluid" alt="">
-                    <a href="#">
-                        <div class="mask"></div>
-                    </a>
-                </div>
-                <!--/.Card image-->
-
-                <!--Card content-->
-                <div class="card-block">
-                    <!--Title-->
-                    <h4 class="card-title">Card title</h4>
-                    <!--Text-->
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-                <!--/.Card content-->
-
-            </div>
-            <!--/.Card-->
-        </div>
-        <!--First columnn-->
-
-        <!--Second columnn-->
-        <div class="col-lg-4">
-            <!--Card-->
-            <div class="card">
-
-                <!--Card image-->
-                <div class="view overlay hm-white-slight">
-                    <img src="http://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(4).jpg" class="img-fluid" alt="">
-                    <a href="#">
-                        <div class="mask"></div>
-                    </a>
-                </div>
-                <!--/.Card image-->
-
-                <!--Card content-->
-                <div class="card-block">
-                    <!--Title-->
-                    <h4 class="card-title">Card title</h4>
-                    <!--Text-->
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-                <!--/.Card content-->
-
-            </div>
-            <!--/.Card-->
-        </div>
-        <!--Second columnn-->
-
-        <!--Third columnn-->
-        <div class="col-lg-4">
-            <!--Card-->
-            <div class="card">
-
-                <!--Card image-->
-                <div class="view overlay hm-white-slight">
-                    <img src="http://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(8).jpg" class="img-fluid" alt="">
-                    <a href="#">
-                        <div class="mask"></div>
-                    </a>
-                </div>
-                <!--/.Card image-->
-
-                <!--Card content-->
-                <div class="card-block">
-                    <!--Title-->
-                    <h4 class="card-title">Card title</h4>
-                    <!--Text-->
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Read more</a>
-                </div>
-                <!--/.Card content-->
-
-            </div>
-            <!--/.Card-->
-        </div>
-        <!--Third columnn-->
-    </div>
-</div>
-<!--/.Content-->
-
-
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <div class="book-search">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
       <%= form_tag books_path, method: "GET" do %>
+        <div class="row">
+          <div class="col-8">
+            <%= text_field_tag :title, "", class: "form-control" %>
+          </div>
+          <div class="col-4">
+            <%= submit_tag "Search", class: "btn btn-primary btn-lg flex-item" %>
+          </div>
+        </div>
       <% end %>
     </div>
   </div>
 </div>
+
+<br>
+
+<!--Content-->
+<div class="container">
+  <div class="row">
+    <!-- columnns -->
+    <% @books.each do |b| %>
+      <div class="col-lg-4">
+        <!--Card-->
+        <div class="card">
+
+          <!--Card image-->
+          <div class="view overlay hm-white-slight">
+            <% if b.picture.nil? %>
+              <%= image_tag asset_path("book.png"), class: "img-fluid", alt: "" %>
+            <% else %>
+              <%= image_tag b.pictuer.url, class: "img-fluid", alt: "" %>
+            <% end %>
+            <a href="#">
+                <div class="mask"></div>
+            </a>
+          </div>
+          <!--/.Card image-->
+
+          <!--Card content-->
+          <div class="card-block">
+            <!--Title-->
+            <h5 class="card-title"><strong><%= b.title %></strong></h5>
+            <!--Text-->
+            <p class="card-text">Writer : <%= b.writer %></p>
+            <p class="card-text">Publihser : <%= b.publisher %></p>
+            <p class="card-text">Year : <%= b.published_at.strftime("%Y-%m-%d") %></p>
+          </div>
+          <!--/.Card content-->
+
+        </div>
+        <!--/.Card-->
+      </div>
+      <!-- columnns -->
+    <% end %>
+  </div>
+</div>
+<!--/.Content-->
+
+
