--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -85,113 +85,9 @@
 
     </div>
     <!--/.Sidebar-->
-
-    <!--Main column-->
+    <!--Main column quotes & opinion-->
     <div class="col-lg-8">
-
-      <!--First row-->
-      <div class="row">
-        <div class="col-md-12">
-          <!--Product-->
-          <div class="product-wrapper">
-
-            <!--Featured image-->
-            <div class="view overlay hm-white-light z-depth-1-half">
-              <img src="http://mdbootstrap.com/img/Photos/Slides/img%20(38).jpg" class="img-fluid " alt="">
-              <div class="mask">
-              </div>
-              <h3 class="price"><span class="badge red darken-2">10 $</span></h3>
-            </div>
-            <!--/.Featured image-->
-
-            <br>
-
-            <!--Product data-->
-            <h2 class="h2-responsive">Product title</h2>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius totam, officiis doloremque velit nobis dolor nulla unde architecto alias praesentium, soluta error omnis sint, impedit, delectus ipsam eveniet debitis nemo.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius totam, officiis doloremque velit nobis dolor nulla unde architecto alias praesentium, soluta error omnis sint, impedit, delectus ipsam eveniet debitis nemo.</p>
-
-            <ul class="rating inline-ul">
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star"></i></li>
-            </ul>
-
-          </div>
-          <!--Product-->
-
-        </div>
-      </div>
-      <!--/.First row-->
-
-      <!--Second row-->
-      <div class="row">
-
-        <!--Heading-->
-        <div class="col reviews">
-          <h2 class="h2-responsive">Reviews</h2>
-        </div>
-
-        <!--First review-->
-        <div class="media">
-          <a class="media-left" href="#">
-            <img class="rounded-circle" src="http://mdbootstrap.com/img//Photos/Avatars/img%20(13).jpg" alt="Generic placeholder image">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">John Doe</h4>
-            <ul class="rating inline-ul">
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate temporibus iure soluta. Quasi mollitia maxime nemo quam accusamus possimus, voluptatum expedita assumenda. Earum sit id ullam eum vel delectus!</p>
-          </div>
-        </div>
-
-        <!--Second review-->
-        <div class="media">
-          <a class="media-left" href="#">
-            <img class="rounded-circle" src="http://mdbootstrap.com/img//Photos/Avatars/avatar-6.jpg" alt="Generic placeholder image">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Nathan Casie</h4>
-            <ul class="rating inline-ul">
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate temporibus iure soluta. Quasi mollitia maxime nemo quam accusamus possimus, voluptatum expedita assumenda. Earum sit id ullam eum vel delectus!</p>
-          </div>
-        </div>
-
-        <!--Second review-->
-        <div class="media">
-          <a class="media-left" href="#">
-            <img class="rounded-circle" src="http://mdbootstrap.com/img//Photos/Avatars/avatar-7.jpg" alt="Generic placeholder image">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Dave Snow</h4>
-            <ul class="rating inline-ul">
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star amber-text"></i></li>
-              <li><i class="fa fa-star"></i></li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate temporibus iure soluta. Quasi mollitia maxime nemo quam accusamus possimus, voluptatum expedita assumenda. Earum sit id ullam eum vel delectus!</p>
-          </div>
-        </div>
-
-      </div>
-      <!--/.Second row-->
-
+      <%= render partial: 'quotes', locals: { quotes: @book.chapters.first.quotes } %>
     </div>
     <!--/.Main column-->
 
