--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -12,8 +12,21 @@ body {
 .navbar {
   background-color: transparent;
 }
+.collapse > span.email {
+  font-size: 16px;
+  padding: {
+    top: 0.5rem;
+  }
+  margin: {
+    right: 1rem;
+  }
+}
 .form-login {
   float: right;
+  input.btn-sm {
+    height: 100%;
+    font-size: 0.8rem;
+  }
 }
 
 .top-nav-collapse {
