--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,15 @@
             </li>
           </ul>
           -->
-          <%= form_tag books_path, class: "form-login form-inline waves-effect waves-light" do %>
-            <%= text_field_tag :email, "",  class: "form-control", placeholder: "EMAIL" %>
-            <%= text_field_tag :password, "", class: "form-control", placeholder: "PASSWORD" %>
+          <% if user_signed_in? %>
+            <span class="navbar-brand email"><%= current_user.email %></span>
+            <%= link_to "Logout", destroy_user_session_path, method: "delete", class: "btn btn-default btn-sm flex-item" %>
+          <% else %>
+            <%= form_for(resource, url: session_path(resource_name), html: {class: "form-login form-inline waves-effect waves-light"}) do |f| %>
+              <%= f.text_field :email, class: "form-control", placeholder: "EMAIL" %>
+              <%= f.password_field :password, class: "form-control", placeholder: "PASSWORD" %>
+              <%= f.submit "Login", class: "btn btn-primary btn-sm flex-item" %>
+            <% end %>
           <% end %>
         </div>
       </div>
@@ -94,10 +100,9 @@
 
         <!--Copyright-->
         <div class="footer-copyright">
-            <div class="container-fluid">
-                © 2015 Copyright: <a href="http://www.MDBootstrap.com"> MDBootstrap.com </a>
-
-            </div>
+          <div class="container-fluid">
+            © 2017 Copyright : <a href="http://americano.com"> Americano.com </a>
+          </div>
         </div>
         <!--/.Copyright-->
 
