--- a/app/views/books/_quotes.html.erb
+++ b/app/views/books/_quotes.html.erb
@@ -1,11 +1,11 @@
 <% quotes.each do |q| %>
   <div class="row">
-    <div class="col-md-12">
-      <div class="reviews">
-        <span>"<%= q.content  %>"</span>
-        <br>
-        <p class="quote-u-name"><%= q.user.email %></p>
-      </div>
+    <div class="col-md-10 reviews">
+      <span>"<%= q.content  %>"</span>
+      <br>
+    </div>
+    <div class="col-md-2 reviews">
+      <span>궁금 / 해결</span>
     </div>
   </div>
 
