--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,7 +27,7 @@
     <!--/.Sidebar-->
     <!--Main column quotes & opinion-->
     <div class="col-lg-8">
-      <%= render partial: 'quotes', locals: { quotes: @book.chapters.first.quotes } %>
+      <%= render partial: 'quotes/show', locals: { quotes: @book.chapters.first.quotes } %>
     </div>
     <!--/.Main column-->
 
