--- a/app/views/quotes/_show.html.erb
+++ b/app/views/quotes/_show.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <%= render partial: 'opinions', locals: { opinions: q.opinions } %>
+  <%= render partial: 'opinions/index', locals: { opinions: q.opinions } %>
 
 <% end %>
 
