--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,3 @@
-<header>
-
-  
-</header>
 <main>
 
 <!--Main layout-->
@@ -12,14 +8,12 @@
     <div class="col-lg-3">
 
       <div class="widget-wrapper">
-        <h4>목차</h4>
+        <h4>Index</h4>
         <br>
         <div class="list-group">
-          <a href="#" class="list-group-item active">Woman</a>
-          <a href="#" class="list-group-item">Man</a>
-          <a href="#" class="list-group-item">Shoes</a>
-          <a href="#" class="list-group-item">T-shirt</a>
-          <a href="#" class="list-group-item">Jewellery</a>
+          <% @book.chapters.each_with_index do |chapter, index| %>
+            <%= link_to "#{chapter.ch_no} #{chapter.title}", class: "list-group-item" %>
+          <% end %>
         </div>
       </div>
 
