--- a/app/views/quotes/_show.html.erb
+++ b/app/views/quotes/_show.html.erb
@@ -1,10 +1,10 @@
 <% quotes.each do |q| %>
   <div class="row">
-    <div class="col-md-10 reviews">
+    <div class="col-lg-10 reviews">
       <span>"<%= q.content  %>"</span>
       <br>
     </div>
-    <div class="col-md-2 reviews">
+    <div class="col-lg-2 reviews">
       <span>궁금 / 해결</span>
     </div>
   </div>
