--- a/app/assets/stylesheets/opinions.scss
+++ b/app/assets/stylesheets/opinions.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the opinions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//
+//
+.n-coffee {
+  font-size: 20px;
+  color: #50412e;
+  text-align: center;
+}
+.user-info {
+  position: absolute;
+  right: 20px;
+  bottom: 0px;
+}
