--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <%= link_to root_path, class: "navbar-brand" do %>
             <strong>Americano</strong>
-          </a>
+          <% end %>
           <div class="collapse navbar-collapse text-right" id="navbarNav1">
             <!-- Nav Menu -->
             <!--
@@ -61,9 +61,9 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <%= link_to root_path, class: "navbar-brand" do %>
             <strong>Americano</strong>
-          </a>
+          <% end %>
           <div class="collapse navbar-collapse" id="navbarNav1">
             <!--
             <ul class="navbar-nav mr-auto">
