bookmark & like model 삭제

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,38 +1,37 @@
 <header>
 
-  
 </header>
 <main>
 
-<!--Main layout-->
-<div class="container">
-  <div class="row">
+  <!--Main layout-->
+  <div class="container">
+    <div class="row">
 
-    <!--Sidebar-->
-    <div class="col-lg-3">
+      <!--Sidebar-->
+      <div class="col-lg-3">
 
-      <div class="widget-wrapper">
-        <h4>목차</h4>
-        <br>
-        <div class="list-group">
-          <a href="#" class="list-group-item active">Woman</a>
-          <a href="#" class="list-group-item">Man</a>
-          <a href="#" class="list-group-item">Shoes</a>
-          <a href="#" class="list-group-item">T-shirt</a>
-          <a href="#" class="list-group-item">Jewellery</a>
+        <div class="widget-wrapper">
+          <h4>목차</h4>
+          <br>
+          <div class="list-group">
+            <a href="#" class="list-group-item active">Woman</a>
+            <a href="#" class="list-group-item">Man</a>
+            <a href="#" class="list-group-item">Shoes</a>
+            <a href="#" class="list-group-item">T-shirt</a>
+            <a href="#" class="list-group-item">Jewellery</a>
+          </div>
         </div>
+
       </div>
+      <!--/.Sidebar-->
+      <!--Main column quotes & opinion-->
+      <div class="col-lg-9">
+        <%= render partial: 'post/index', locals: { quotes: @quotes } %>
+      </div>
+      <!--/.Main column-->
 
     </div>
-    <!--/.Sidebar-->
-    <!--Main column quotes & opinion-->
-    <div class="col-lg-9">
-      <%= render partial: 'quotes/index', locals: { quotes: @quotes } %>
-    </div>
-    <!--/.Main column-->
-
   </div>
-</div>
-<!--/.Main layout-->
+  <!--/.Main layout-->
 
 </main>
