--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,7 +26,7 @@
       <!--/.Sidebar-->
       <!--Main column quotes & opinion-->
       <div class="col-lg-9">
-        <%= render partial: 'post/index', locals: { quotes: @quotes } %>
+        <%= render partial: 'posts/index', locals: { post: @post } %>
       </div>
       <!--/.Main column-->
 
