--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -1,4 +1,4 @@
-<% quotes.each do |q| %>
+<% posts.each do |q| %>
   <div class="row">
     <div class="col-lg-10 reviews">
       <span>"<%= q.content  %>"</span>
@@ -8,5 +8,5 @@
       <span>궁금 / 해결</span>
     </div>
   </div>
-  <%= render partial: 'opinions/index', locals: { opinions: q.opinions } %>
+  <%= render partial: 'replies/index', locals: { replies: q.replies} %>
 <% end %>
