--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="quote-new">
-    <%= link_to "+ New Quote", new_quote_path, remote: true %>
+    <%= link_to "+ New Post", new_post_path, remote: true %>
   </div>
 </div>
   <div id="quotes-index" class="row quotes-index">
@@ -9,7 +9,7 @@
         <% posts.each do |q| %>
           <tr>
             <td class="quote-content" style="width:80%;"><%= q.content %></td>
-            <td class="quote-opinions text-center" style="width:10%;"><i class="fa fa-comments-o"></i> &nbsp; <%= q.opinions.count %> </td>
+            <td class="quote-opinions text-center" style="width:10%;"><i class="fa fa-comments-o"></i> &nbsp; <%= q.replies.count %> </td>
             <td class="text-center"><i class="fa fa-question-circle"></i> &nbsp;&nbsp; <i class="fa fa-exclamation-circle"></td>
           </tr>
         <% end %>
