--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
     <div class="row">
 
       <!--Main column quotes & opinion-->
-      <div class="col-lg-10">
+      <div class="offset-lg-1 col-lg-10">
         <%= render partial: 'posts/index', locals: { posts: @posts } %>
       </div>
       <!--/.Main column-->
