--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -3,19 +3,12 @@
     <%= link_to "+ New Post", new_post_path, remote: true %>
   </div>
 </div>
-<div id="quotes-index" class="row quotes-index">
-  <table class="table table-hover">
-    <tbody>
-      <% posts.each do |q| %>
-        <tr>
-          <td class="quote-content" style="width:80%;"><%= q.content %></td>
-          <%= link_to(q) do %>
-            <td class="quote-opinions text-center" style="width:10%;">
-              <i class="fa fa-comments-o"></i> &nbsp; <%= q.replies.count %>
-            </td>
-          <% end %>
-         </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+<% posts.each do |q| %>
+  <div class="row">
+    <div class="col-lg-11">
+      <%= q.content %>
+    </div>
+    <div class="col-lg-1"><i class="fa fa-comments-o"></i> &nbsp; <%= q.replies.count %></div>
+  </div>
+  <%= render partial: 'replies/index', locals: { replies: q.replies } %>
+<% end %>
