--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -9,9 +9,10 @@ body {
   height: 100%;
 }
 
-.main {
-  min-height: 34rem;
+main {
+  min-height: 78vh;
 }
+
 /* Navigation*/
 .navbar {
   background-color: transparent;
