--- a/app/views/replies/_index.html.erb
+++ b/app/views/replies/_index.html.erb
@@ -1,8 +1,15 @@
 <% replies.each do |o| %>
-  <div class="row">
-    <span><%= o.content %></span>
-    <br>
-    <span><%= o.user.email %></span>
-    <hr>
+  <div class="col-lg-2">
   </div>
+  <div class="col-lg-10">
+    <%= o.user.email %>
+    <div class="card-data">
+      <ul>
+        <li class="comment-date"><i class="fa fa-clock-o"></i> 17/10/2015</li>
+      </ul>
+    </div>
+    <p class="comment-text"><%= o.content %>
+  </p>
+  <hr>
+</div>
 <% end %>
