--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="quote-new">
-    <%= link_to "+ New Post", new_post_path %>
+    <%= link_to "+ New Post", new_book_post_path(book) %>
   </div>
 </div>
 <br>
