--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
 
     <div class="row">
       <div class="offset-lg-1 col-lg-10">
-        <%= form_tag posts_path, method: 'POST', remote: true, class: 'form-group' do %>
+        <%= form_tag book_posts_path(@book), method: 'POST', remote: true, class: 'form-group' do %>
           <div class="row">
             <div class="col-4">
               <%= text_field_tag :content, "", class: 'form-control', placeholder: "검색" %>
@@ -27,7 +27,7 @@
     <div class="row">
       <!--Main column quotes & opinion-->
       <div class="offset-lg-1 col-lg-10">
-        <%= render partial: 'posts/index', locals: { posts: @posts } %>
+        <%= render partial: 'posts/index', locals: { posts: @posts, book: @book } %>
       </div>
       <!--/.Main column-->
     </div>
