--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,13 @@
 <main>
-<div class="container main">
-  <div class="row">
-    <div class="col-lg-10 offset-lg-1">
-      <%= form_for [@book, @post], class: "form-group" do |f| %>
-        <%= f.text_area :content, class: "form-control" %>
-        <%= f.submit "SUBMIT", class: "btn btn-default" %>
-      <% end %>
+  <div class="container main">
+    <div class="row">
+      <div class="col-lg-10 offset-lg-1">
+        <%= form_for [@book, @post], class: "form-group" do |f| %>
+          <%= f.number_field :page, class: "form-control", placeholder: "PAGE" %>
+          <%= f.text_area :content, class: "form-control", placeholder: "내용을 입력해주세요.", row: 50 %>
+          <%= f.submit "SUBMIT", class: "btn btn-default" %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
 </main>
