--- a/app/views/replies/_index.html.erb
+++ b/app/views/replies/_index.html.erb
@@ -1,8 +1,9 @@
-<% replies.each do |o| %>
-  <div class="row">
-    <span><%= o.content %></span>
-    <br>
-    <span><%= o.user.email %></span>
-    <hr>
+<% replies.each do |r| %>
+  <div class="card card-reply blue lighten-5">
+    <div class="card-block">
+      <span class="grey-text"><i class="fa fa-user-circle"></i> &nbsp; <%= r.user.email %></span>
+      <br><br>
+      <%= simple_format(r.content) %>
+    </div>
   </div>
 <% end %>
