--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -1,7 +1,7 @@
 <% posts.each do |q| %>
   <div class="row">
     <div class="col-lg-10 reviews">
-      <span>"<%= q.content  %>"</span>
+      <%= q.content %>
       <br>
     </div>
     <div class="col-lg-2 reviews">
