--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,27 +1,33 @@
 <div class="row">
   <div class="quote-new">
+    &nbsp;&nbsp;
     <%= link_to "+ New Post", new_book_post_path(book) %>
   </div>
 </div>
 <br>
-<% posts.each do |p| %>
-  <div class="card">
-    <div class="card-block">
-      <span class="grey-text"><i class="fa fa-user-circle"></i> &nbsp; <%= p.user.email %></span> &nbsp;&nbsp;
-      <br><br>
-      <%= simple_format(p.content) %>
-      <hr>
-      <%= link_to post_replies_path(p.id), remote: true do %>
-        <span class="light-blue-text"><i class="fa fa-comments-o"></i> &nbsp; <%= p.replies.count %></span>
-      <% end %>
-      <%= link_to new_post_reply_path(p.id), class: "new-comment", remote: true do %>
-        <i class="fa fa-plus-square" aria-hidden="true"></i> Comment
-      <% end %>
+<% if posts.empty? %>
+  <br>
+  <h5 class="text-center light-blue-text">결과가 없습니다.</h5>
+<% else %>
+  <% posts.each do |p| %>
+    <div class="card">
+      <div class="card-block">
+        <span class="grey-text"><i class="fa fa-user-circle"></i> &nbsp; <%= p.user.email %></span> &nbsp;&nbsp;
+        <br><br>
+        <%= simple_format(p.content) %>
+        <hr>
+        <%= link_to post_replies_path(p.id), remote: true do %>
+          <span class="light-blue-text"><i class="fa fa-comments-o"></i> &nbsp; <%= p.replies.count %></span>
+        <% end %>
+        <%= link_to new_post_reply_path(p.id), class: "new-comment", remote: true do %>
+          <i class="fa fa-plus-square" aria-hidden="true"></i> Comment
+        <% end %>
+      </div>
     </div>
-  </div>
-  <!-- reply/new -->
-  <div id="post_<%= p.id %>_new">
-  </div>
-  <div id="post_<%= p.id %>">
-  </div>
+    <!-- reply/new -->
+    <div id="post_<%= p.id %>_new">
+    </div>
+    <div id="post_<%= p.id %>">
+    </div>
+  <% end %>
 <% end %>
