--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -131,7 +131,7 @@
   <div class="row">
     <!-- columnns -->
     <% @books.each do |b| %>
-      <div class="col-lg-4">
+      <div class="col-lg-3 col-md-6">
         <!--Card-->
         <div class="card card-book">
 
@@ -155,7 +155,7 @@
             <p class="card-text white-text">Writer : <%= b.writer %></p>
             <p class="card-text white-text">Publihser : <%= b.publisher %></p>
             <p class="card-text white-text">Year : <%= b.published_at.strftime("%Y-%m-%d") %></p>
-            <%= link_to "R E A D", book_path(b, page: b.posts.order(:page).pluck(:page).uniq[0] ), class: "btn btn-default" %>
+            <%= link_to "STUDY", book_path(b, page: b.posts.order(:page).pluck(:page).uniq[0] ), class: "btn btn-default" %>
           </div>
           <!--/.Card content-->
 
