--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -22,6 +22,10 @@
         <%= link_to new_post_reply_path(p.id), class: "new-comment", remote: true do %>
           <i class="fa fa-plus-square" aria-hidden="true"></i> Comment
         <% end %>
+        <% if p.user_id == current_user.id %>
+          <%= link_to "Delete", post_path, method: "DELETE", class: "delete-comment red-text" %>
+          <%= link_to "Edit", edit_post_path(p), class: "edit-comment green-text" %>
+        <% end %>
       </div>
     </div>
     <!-- reply/new -->
