plus seed, new book

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -71,6 +71,10 @@ main {
   padding: 185px 10px;
 }
 
+.book-margin {
+  margin-bottom: 20px;
+}
+
 footer.page-footer {
   background-color: #4285F4;
 }
