--- a/app/views/replies/_new.html.erb
+++ b/app/views/replies/_new.html.erb
@@ -2,7 +2,7 @@
   <div class="card-block">
     <%= form_for [post, reply], class: "form-group" do |f| %>
       <%= f.text_area :content, class: "form-control" %>
-      <%= f.submit "SUBMIT", class: "btn btn-default" %>
+      <%= f.submit "SUBMIT", class: "btn btn-default submit-reply" %>
     <% end %>
   </div>
 </div>
