--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+form.new_post {
+  i.fa-book {
+    font-size: 25px;
+  }
+  input.new-post-page {
+    display: inline;
+    width: 5rem;
+    text-align: center;
+  }
+}
